# sentiment-analysis

./: .gitignore  Dockerfile  Makefile  README.md  application.py  pyproject.toml  requirements.txt
gcp/compute/: bootstrap.tf  compute.tf  iam.tf  network.tf  outputs.tf  variables.tf
gcp/kubernetes/: bootstrap.tf  cluster.tf  iam.tf  network.tf  outputs.tf
notebooks/: performance.ipynb  publish.ipynb  train.ipynb
scripts/: install-dependencies.sh  jupyterlab.service
src/: application.py  predict.py  train.py
templates/: deployment.yaml  index.html  service.yaml
