[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Welbert Castro <welberthime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
fasttext = "^0.9.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pandas = "^1.4.1"
scikit-learn = "^1.0.2"
requests = "^2.27.1"
pyarrow = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
